# incubator

./: .gitignore  README.md  pyproject.toml  run.py
artifacts/: errors.txt
data/: sp500_tickers.json  strategy_state.json
idea/idea_estrategia_de_invers_20250418_114614/: Untitled.ipynb  codigo_python.py  historial_completo.txt  idea.txt
idea/idea_estrategia_de_invers_20250418_122902/: Untitled.ipynb  codigo_python.py  historial_completo.txt  idea.txt
idea/idea_estrategia_de_invers_20250418_135402/: Untitled.ipynb  codigo_python.py  historial_completo.txt  idea.txt
idea/idea_estrategia_de_invers_20250418_143050/: Untitled.ipynb  codigo_python.py  historial_completo.txt  idea.txt
incubator/: form.py  orchestration.py
incubator/agents/: agent.py  multioutputagent.py
incubator/api/: dialog_api.py
incubator/legacy/: part1.py  part2_images.py  part2_simplified.py
incubator/llm/: antropic.py
incubator/messages/: message.py
incubator/wf/: adapter.py  dialogcontroller.py  dialogecontroler.py  dialogenode.py  dialognode.py  enhanced_dialognode.py  (+5 more)
logs/: conversation_20250418_085336.txt  conversation_20250418_091224.txt  conversation_20250418_093116.txt  conversation_20250418_093807.txt  conversation_20250418_094655.txt  conversation_20250418_095146.txt  conversation_20250418_100505.txt  conversation_20250418_102634.txt  conversation_20250418_112331.txt  conversation_20250418_112934.txt  conversation_20250418_115107.txt  conversation_20250418_124658.txt  conversation_20250418_131931.txt  conversation_20250418_135910.txt
notebooks/: ideas generator.ipynb
(+86 files in other folders)
