[project]
name = "incubator"
version = "0.1.0"
description = ""
authors = [
    {name = "Angel Lordan",email = "nopaixx@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "notebook (>=7.4.0,<8.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "anthropic (>=0.49.0,<0.50.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "yfinance (>=0.2.55,<0.3.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "hmmlearn (>=0.3.3,<0.4.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "lxml (>=5.3.2,<6.0.0)",
    "tensorflow (==2.18.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "arch (>=7.2.0,<8.0.0)",
    "cvxpy (>=1.6.5,<2.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "numba (>=0.61.2,<0.62.0)",
    "alpaca-trade-api (>=3.2.0,<4.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "quantstats (>=0.0.64,<0.0.65)"
]

[tool.poetry]
packages = [{include = "incubator", from = "src"}]
# packages = [{include = "incubator"}]
# packages = [{ include = "src/incubator"}]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
